# coeus_submission

./: .cursorignore  .gitignore  GEMINI.md  INTERVIEW_WORKFLOW.md  LOG_CONSOLIDATOR_README.md  README.md  SCRAPER_INTEGRATION_GUIDE.md  WEBSOCKET_REFACTOR.md  flake.nix  job_description.txt  linkdin_scrapper.py  log_consolidator.py  pyproject.toml  requirements.txt  test_websocket_simple.py
api/: README.md  __init__.py  main.py  requirements.txt  run.py  test_api.py  test_interview_api.py
coeus-frontend/: GEMINI.md  README.md  animation_state.json  package-lock.json  package.json
consolidated_logs/: consolidated_interview_log_20250928_041745.json  consolidated_interview_log_20250928_042426.json  consolidated_interview_log_20250928_043551.json
linkedin_scraper/: README.md
logs/: interview_summary_20250928_075336.json  interview_summary_20250929_071449.json  person_Vatsal_Jain_20250928_061102.json  person_Vatsal_Jain_20250928_061532.json  person_Vatsal_Jain_20250928_074437.json  person_Vatsal_Jain_20250928_074528.json  person_Vatsal_Jain_20250928_074543.json  person_Vatsal_Jain_20250928_074607.json  person_Vatsal_Jain_20250928_075224.json  person_Vatsal_Jain_20250928_075323.json  resume_resume_20250928_061427_a4b32607_20250928T011232.json  resume_resume_20250928_061427_a4b32607_20250928T013702.json  resume_resume_20250928_074348_f2d1b58c_20250928T021454.json  resume_resume_20250928_074348_f2d1b58c_20250928T021544.json  resume_resume_20250928_074441_29592a82_20250928T021529.json  resume_resume_20250928_075137_974b6bef_20250928T022228.json  (+1 more)
playground/: deepgram.md  (+10 more)
(+205 files in other folders)
